@@ -1,3 +1,0 @@
-etc/xdg/kleopatra.categories
-etc/xdg/kleopatra.renamecategories
-usr/
