@@ -6,9 +6,8 @@ include /usr/share/pkg-kde-tools/qt-kde-team/3/debian-qt-kde.mk
 include /usr/share/pkg-kde-tools/qt-kde-team/2/l10n-packages.mk
 
 override_dh_auto_install:
-	rm -f debian/tmp/usr/lib/*/libkleopatraclientcore.so
-	rm -f debian/tmp/usr/lib/*/libkleopatraclientgui.so
-	$(overridden_command) --destdir=debian/tmp
+	$(overridden_command)
+	find debian/kleopatra -name '*.so' -type l -delete
 
 override_dh_auto_test:
 	# Disable dh_auto_test at build time
