@@ -3,6 +3,10 @@ kleopatra (4:17.08.3-2) UNRELEASED; urgency=medium
   [ Pino Toscano ]
   * Switch the deprecated gnupg2 dependency to gnupg.
   * Simplify watch file, and switch it to https.
+  * Stop forcing debian/tmp as local installation directory, installing
+    everything to the final location
+    - drop kleopatra.install, no more useful now
+    - make sure to not ship development symlinks
 
  -- Debian/Kubuntu Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sat, 23 Dec 2017 11:31:44 +0100
 
